🚧 Enter your name Page finished

--- a/To-Do App/src/quasar-variables.sass
+++ b/To-Do App/src/quasar-variables.sass
@@ -1,10 +1,10 @@
-$primary   : #52b677
-$secondary : #7ce869
-$accent    : #9C27B0
+$primary   : #cb5bd3
+$secondary : #99549b
+$accent    : #db7ce2
 
-$dark      : #1D1D1D
+$dark      : #230b21
 
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
-$warning   : #F2C037
+$positive  : #c267d0
+$negative  : #5a0959
+$info      : #ab35ad
+$warning   : #b12599bf
