🚧 To do list page done

--- a/To-Do App/src/quasar-variables.sass
+++ b/To-Do App/src/quasar-variables.sass
@@ -1,10 +1,10 @@
-$primary   : #cb5bd3
-$secondary : #99549b
-$accent    : #db7ce2
+$primary   : #C4D6A2
+$secondary : #7abf7f
+$accent    : #bbe69d
 
-$dark      : #230b21
+$dark      : #263e2a
 
-$positive  : #c267d0
-$negative  : #5a0959
-$info      : #ab35ad
-$warning   : #b12599bf
+$positive  : #a4d5ac
+$negative  : #2e6b36
+$info      : #6cba6c
+$warning   : #368c43bf
